--- a/db/FSM.lpc.html
+++ b/db/FSM.lpc.html
@@ -34,13 +34,29 @@
 <TR >
 <TD >mi_tiempo</TD>
 <TD >3</TD>
+<TD >1</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >1</TD>
 <TD >17</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >spi_instance</TD>
+<TD >12</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >11</TD>
+<TD >8</TD>
+<TD >8</TD>
+<TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
